# rs-gp-api

./: Cargo.toml  Dockerfile  docker-compose.yml  run.sh  start.sh  stop.sh
ron/: global_properties.ron
src/: main.rs
src/gp/: mod.rs
